Stylesheets renamed. Makefile

--- a/app/assets/stylesheets/framework/spaces.sass
+++ b/app/assets/stylesheets/framework/spaces.sass
@@ -1,4 +1,4 @@
-@import 'config.css.sass'
+@import 'config.sass'
 
 /**
  * Should be used to modify the default spacing between objects (not between nodes of the same object)
