--- a/app/assets/stylesheets/modules/dark/crossbar.sass
+++ b/app/assets/stylesheets/modules/dark/crossbar.sass
@@ -1,4 +1,4 @@
-@import '../../framework/config.css.sass'
+@import '../../framework/config'
 
 .crossbar
   background: image-url('futurico/crossbar/center.png') center no-repeat
