--- a/app/assets/stylesheets/layouts/futurico.sass
+++ b/app/assets/stylesheets/layouts/futurico.sass
@@ -1,4 +1,4 @@
-@import '../framework/config.css.sass'
+@import '../framework/config'
 
 body
   background: #292b30 image-url('futurico/background-noise.png')
