--- a/app/views/static/futurico/_header.html.haml
+++ b/app/views/static/futurico/_header.html.haml
@@ -16,9 +16,9 @@
         %li.current
           %a{:href => "#"} Main page
         %li
-          %a{:href => "#"} Services
+          %a{:href => "html/bundle.zip"} HTML / CSS / JS
         %li
-          %a{:href => "#"} Contacts
+          %a{:href => "http://github.com/railsware/scaffy"} HAML / SASS / JS
 
     .last-col
       .header-search
