--- a/app/assets/stylesheets/modules/dark/starbar.sass
+++ b/app/assets/stylesheets/modules/dark/starbar.sass
@@ -13,12 +13,13 @@
     background: image-url('futurico/starbar/star.png') 0 0 no-repeat
     float: left
     height: 16px
-    margin-right: 1px
-    width: 16px
+    width: 17px
     &.half
       background-position: 0 -22px
     &.full
       background-position: 0 -45px
+    &.focus
+      cursor: pointer
 
   .starbar-rating
     color: #216a72
