Form elements polishing. Positioning forms like in the mockup. Scrollboxes polishing.

--- a/app/assets/stylesheets/modules/dark/scrollbox.sass
+++ b/app/assets/stylesheets/modules/dark/scrollbox.sass
@@ -67,6 +67,10 @@ $click: inset 0 0 7px rgba(#000, .8)
       background: image-url('futurico/scrollbox/sliders.png') center -30px no-repeat
       top: -2px
       +center-slider(19px)
+      &:hover,
+      &:active
+        background-position: center -61px
+        +box-shadow($medium)
 
   .scale
     background-color: #84aa31
