--- a/app/views/static/futurico/_checkboxes.html.haml
+++ b/app/views/static/futurico/_checkboxes.html.haml
@@ -1,20 +1,20 @@
--# Disk checkboxes set
 .radiogroup
-  .mbm
-    .radio
-      Radio 1
+  .form-row.clearfix
+    .col1of2
+      .radio.checked
+        Radio 1
 
-  .mbl
-    .radio.checked
-      Radio 2
+    .col1of2
+      .checkbox.checked
+        Option 1
 
--# Square checkboxes set
-.mbm
-  .checkbox
-    Checkbox
+  .form-row.last.clearfix
+    .col1of2
+      -# Disk checkbox
+      .radio
+        Radio 2
 
--# Light Square checkboxes set
-.mbm
-  .checkbox-light
-    Light checkbox
+    .col1of2
+      .checkbox
+        Option 2
 
