--- a/app/views/static/futurico/_scrollboxes.html.haml
+++ b/app/views/static/futurico/_scrollboxes.html.haml
@@ -1,15 +1,15 @@
-.mbl
+.mbl.ptm
   .scrollbox.dot
     .hitbox
-    .scale{:style => "width: 20%"}
+    .scale{:style => "width: 75%"}
 
-.mbl
+.mbl.ptm
   .scrollbox.disk
     .hitbox
-    .scale{:style => "width: 40%"}
+    .scale{:style => "width: 50%"}
 
-.mbl
+.mbm.ptm.pbl
   .scrollbox.range
     .hitbox
-    .scale{:style => "width: 66%"}
+    .scale{:style => "width: 30%"}
 
