--- a/app/views/static/futurico/_selects.html.haml
+++ b/app/views/static/futurico/_selects.html.haml
@@ -7,3 +7,12 @@
     %option{:value => "Babs"} Babs
     %option{:value => "Fox"} Fox
 
+.mbl
+  %select.select-arrowed
+    %option
+    %option{:value => "Aaliyah"} Aaliyah
+    %option{:value => "Barbara"} Barbara
+    %option{:value => "Azura"} Azura
+    %option{:value => "Babs"} Babs
+    %option{:value => "Fox"} Fox
+
