--- a/app/views/static/futurico/_text_inputs.html.haml
+++ b/app/views/static/futurico/_text_inputs.html.haml
@@ -1,8 +1,8 @@
 .mbl
-  .text.dark
-    %input{:type => "text", :placeholder => "Search box dark", :tabindex => "3"}
+  .text-rounded.light
+    %input{:type => "text", :placeholder => "Light edit box", :tabindex => "3"}
 
 .mbl
-  .text-rounded.dark
-    %input{:type => "text", :placeholder => "Search box rounded dark", :tabindex => "3"}
+  .text.dark
+    %input{:type => "text", :placeholder => "Text edit", :tabindex => "3"}
 
