Radios & checkboxes JS

--- a/app/views/static/futurico/_checkboxes.html.haml
+++ b/app/views/static/futurico/_checkboxes.html.haml
@@ -1,20 +1,42 @@
 .radiogroup
+  -# Form row
   .form-row.clearfix
     .col1of2
-      .radio.checked
+      .radio.checked.js-radio
         Radio 1
 
     .col1of2
-      .checkbox.checked
+      .checkbox.checked.js-checkbox
         Option 1
 
-  .form-row.last.clearfix
+  -# Form row
+  .form-row.clearfix
     .col1of2
-      -# Disk checkbox
-      .radio
+      .radio.js-radio
         Radio 2
 
     .col1of2
-      .checkbox
+      .checkbox.js-checkbox
         Option 2
+
+.radiogroup
+  -# Form row
+  .form-row.clearfix
+    .col1of2
+      .radio-light.checked.js-radio
+        Radio 3
+
+    .col1of2
+      .checkbox-light.checked.js-checkbox
+        Option 3
+
+  -# Form row
+  .form-row.last.clearfix
+    .col1of2
+      .radio-light.js-radio
+        Radio 4
+
+    .col1of2
+      .checkbox-light.js-checkbox
+        Option 4
 
