Apply chosen to js-select

--- a/app/views/static/futurico/_selects.html.haml
+++ b/app/views/static/futurico/_selects.html.haml
@@ -1,5 +1,5 @@
 .mbl
-  %select.select
+  %select.select.js-select
     %option
     %option{:value => "Aaliyah"} Aaliyah
     %option{:value => "Barbara"} Barbara
@@ -8,7 +8,7 @@
     %option{:value => "Fox"} Fox
 
 .mbl
-  %select.select-arrowed
+  %select.select-arrowed.js-select
     %option
     %option{:value => "Aaliyah"} Aaliyah
     %option{:value => "Barbara"} Barbara
