--- a/app/assets/stylesheets/modules/dark/login-block.sass
+++ b/app/assets/stylesheets/modules/dark/login-block.sass
@@ -3,10 +3,10 @@
 .login-block
   background-color: #141517
   border-radius: 8px
-  color: #fff
+  color: $sharp
   padding: 23px 30px 30px
   position: relative
-  +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
+  +box-shadow((inset 0 1px 0 $contrast, 0 1px 0 rgba($sharp, .06)))
   behavior: url('/assets/vendor/PIE.htc')
 
   .login-ear
