--- a/app/assets/stylesheets/modules/dark/user-slug.sass
+++ b/app/assets/stylesheets/modules/dark/user-slug.sass
@@ -10,7 +10,7 @@
     +box-shadow((inset 0 1px 0 #0a0a0b, 0 1px 0 rgba(#fff, .06)))
 
   .slug-name
-    color: #fff
+    color: $sharp
     font-size: 12px
     margin: 4px 0 3px
 
@@ -33,7 +33,7 @@
         background-color: #98bf43
 
     &.away
-      color: #999
+      color: $pale
       &:before
         background-color: #999
 
