--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -18,7 +18,7 @@
             = render :partial => "static/futurico/scrollboxes"
             = render :partial => "static/futurico/selects"
             = render :partial => "static/futurico/text-inputs-rounded"
-            .mbl.pbs
+            .mbl.pbm
               = render :partial => "static/futurico/checkboxes"
             .pbl
               = render :partial => "static/futurico/buttons"
