--- a/app/views/static/futurico/_tabbox.html.haml
+++ b/app/views/static/futurico/_tabbox.html.haml
@@ -17,8 +17,12 @@
       .tabbox-content
         #tabbox-archive
           .heading
-            %h2
-              Archived data
+            %h2.heading-col
+              Heading 1
+            %h3.heading-col
+              Heading 2
+            %h4.heading-col
+              Heading 3
               %span.status-message.negative No connection
             .preloader
           %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
