--- a/app/assets/stylesheets/framework/config.sass
+++ b/app/assets/stylesheets/framework/config.sass
@@ -1,22 +1,23 @@
 // Colors
-$base-font-color: #000
-$opaque:          #333
-$neutral:         #666
-$pale:            #999
-$bare:            #aaa
-$firm:            #fc6c06
-$sharp:           #fff
-$positive:        #9c0
-$negative:        #c00
-$link:            #000080
+$base-color: #404040
+$opaque:     #333
+$neutral:    #565656
+$pale:       #999
+$bare:       #a8a8a8
+$firm:       #9bc345
+$sharp:      #fff
+$contrast:   #000
+$positive:   #9cc346
+$negative:   #c34646
+$link:       #000080
 
 // Typography
 $base-font: Arial, sans-serif
 $firm-font: Georgia, serif
-$h1: 26px
-$h2: 22px
-$h3: 18px
-$h4: 16px
+$h1: 22px
+$h2: 18px
+$h3: 16px
+$h4: 14px
 $h5: 13px
 $h6: 11px
 $base-font-size: 12px
