--- a/app/assets/stylesheets/modules/dark/comments.sass
+++ b/app/assets/stylesheets/modules/dark/comments.sass
@@ -3,12 +3,12 @@
 .comments
   background-color: #141517
   border-radius: 2px
-  color: #fff
+  color: $sharp
   display: inline-block
   font: italic 11px $firm-font
   padding: 4px 7px 6px
   position: relative
-  +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
+  +box-shadow((inset 0 1px 0 $contrast, 0 1px 0 rgba($sharp, .06)))
 
   .ear
     background: image-url('futurico/comments/ear.png') 0 0 no-repeat
