--- a/app/assets/stylesheets/modules/dark/progressbar.sass
+++ b/app/assets/stylesheets/modules/dark/progressbar.sass
@@ -1,8 +1,8 @@
 @import '../../framework/config'
 
 .progressbar-label
-  color: #fff
+  color: $sharp
   margin-bottom: 6px
   text-align: right
-  text-shadow: 0 1px 0 rgba(#000, .5)
+  text-shadow: 0 1px 0 rgba($contrast, .5)
 
