--- a/app/assets/stylesheets/modules/dark/tabbox.sass
+++ b/app/assets/stylesheets/modules/dark/tabbox.sass
@@ -6,7 +6,7 @@
 
 // Tabbox main horizontal tabs to navigate through
 .tabbox-tabs
-  color: #a8a8a8
+  color: $bare
   font-size: 13px
   overflow: hidden
   text-shadow: 0 1px 0 rgba(#000, .2)
@@ -26,7 +26,7 @@
       +box-shadow((inset 0 1px 0 rgba(#fff, .15), inset 0 1px 5px rgba(#000, .4)))
       +vertical-gradient(#5b5d62, #4b4d51)
     &.active
-      color: #404040
+      color: $base-color
       padding-bottom: 12px
       text-shadow: 0 1px 0 #fff
       +box-shadow(inset 0 1px #fff)
@@ -89,15 +89,20 @@
     padding-bottom: 15px
     position: relative
 
+  .heading-col
+    display: inline-block
+    margin-right: 15px
+    vertical-align: baseline
+
   // Tabbox status messages
   .status-message
-    color: #999
+    color: $pale
     font: italic 11px $firm-font
     padding-left: 10px
     &.positive
-      color: #9cc346
+      color: $positive
     &.negative
-      color: #c34646
+      color: $negative
 
   // Tabbox preloader when something is loading
   .preloader
