--- a/app/views/static/futurico/_text-inputs-rounded.html.haml
+++ b/app/views/static/futurico/_text-inputs-rounded.html.haml
@@ -3,7 +3,7 @@
     %input{:type => "text", :value => "Search box", :tabindex => "5"}
     %input.search-button{:type => "submit", :value => "", :tabindex => "6"}
 
-.mbl
+.mbl.pbm
   .text-rounded.dark
     %input{:type => "text", :value => "1 250 USD", :tabindex => "4"}
 
