Config font-sizes

--- a/app/assets/stylesheets/modules/dark/appreciate.sass
+++ b/app/assets/stylesheets/modules/dark/appreciate.sass
@@ -4,7 +4,7 @@
   background: image-url('futurico/appreciate/splash.png') 0 0 no-repeat
   display: block
   cursor: pointer
-  font-size: 13px
+  font-size: $h5
   height: 97px
   position: relative
   text-align: center
