--- a/app/assets/stylesheets/modules/dark/currently-playing.sass
+++ b/app/assets/stylesheets/modules/dark/currently-playing.sass
@@ -36,7 +36,7 @@ $song-time-width: 50px
   .song-info
     padding-top: 8px
     position: relative
-    font-size: 10px
+    font-size: $h6 - 1px
 
   // Song track
   .scrollbox.dot
@@ -54,6 +54,7 @@ $song-time-width: 50px
       top: -1px
 
   .song-time
+    line-height: 13px
     position: absolute
     top: 7px
     width: $song-time-width
