--- a/app/assets/stylesheets/modules/dark/site-info.sass
+++ b/app/assets/stylesheets/modules/dark/site-info.sass
@@ -22,7 +22,7 @@
 
   .version
     font-family: $firm-font
-    font-size: 11px
+    font-size: $h6
     margin-left: 3px
     position: relative
     top: -5px
