--- a/app/assets/stylesheets/modules/dark/header.sass
+++ b/app/assets/stylesheets/modules/dark/header.sass
@@ -8,7 +8,7 @@
 // Login, Sign up and similar links
 .header-controls
   color: #8d8d8d
-  font-size: 11px
+  font-size: $h6
   a
     color: #ddd
     text-decoration: none
@@ -27,7 +27,7 @@
 // Main site navigation
 .header-navigation
   font-family: "Helvetica Neue", $base-font
-  font-size: 13px
+  font-size: $h5
   text-align: center
   text-transform: uppercase
   li
