--- a/app/assets/stylesheets/modules/dark/tabbox.sass
+++ b/app/assets/stylesheets/modules/dark/tabbox.sass
@@ -7,7 +7,7 @@
 // Tabbox main horizontal tabs to navigate through
 .tabbox-tabs
   color: $bare
-  font-size: 13px
+  font-size: $h5
   overflow: hidden
   text-shadow: 0 1px 0 rgba(#000, .2)
   li
