--- a/app/assets/stylesheets/framework/config.sass
+++ b/app/assets/stylesheets/framework/config.sass
@@ -23,10 +23,10 @@ $h6: 11px
 $base-font-size: 12px
 
 //Spaces
-$extrasmall: 3px
-$small:      5px
-$medium:     10px
-$large:      20px
+$padding-x: 3px
+$padding-s: 5px
+$padding-m: 10px
+$padding-l: 20px
 
 @import 'mixins.sass'
 
