--- a/app/views/static/futurico/_tabbox.html.haml
+++ b/app/views/static/futurico/_tabbox.html.haml
@@ -25,21 +25,36 @@
               Heading 3
               %span.status-message.negative No connection
             .preloader
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
+
+          .clearfix
+            .col2of5.mrl.prl
+              = render :partial => "static/futurico/dataset"
+            .col2of5
+              = render :partial => "static/futurico/dataset"
 
         #tabbox-messages
           .heading
             %h2
               Inbox messages
               %span.status-message.positive 2 new
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
+
+          .clearfix
+            .col2of5.mrl.prl
+              = render :partial => "static/futurico/dataset"
+            .col2of5
+              = render :partial => "static/futurico/dataset"
 
         #tabbox-cloud
           .heading
             %h2
               Files inside the cloud
               %span.status-message Total: 91,819,826
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
+
+          .clearfix
+            .col2of5.mrl.prl
+              = render :partial => "static/futurico/dataset"
+            .col2of5
+              = render :partial => "static/futurico/dataset"
 
   -# Option 2 tabbox
   .tabbox-stuff.clearfix
@@ -57,12 +72,22 @@
               Archived data
               %span.status-message.negative No connection
             .preloader
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
+
+          .clearfix
+            .col2of5.mrl.prl
+              = render :partial => "static/futurico/dataset"
+            .col2of5
+              = render :partial => "static/futurico/dataset"
 
         #tabbox-messages-2
           .heading
             %h2
               Inbox messages
               %span.status-message.positive 2 new
-          %img{:src => "/assets/futurico/tabbox/fish-decor.png", :alt => ""}
+
+          .clearfix
+            .col2of5.mrl.prl
+              = render :partial => "static/futurico/dataset"
+            .col2of5
+              = render :partial => "static/futurico/dataset"
 
