--- a/app/assets/stylesheets/framework/spaces.sass
+++ b/app/assets/stylesheets/framework/spaces.sass
@@ -3,125 +3,125 @@
 /**
  * Should be used to modify the default spacing between objects (not between nodes of the same object)
  * a, t, r, b, l, h, v = all,top,right,bottom,left,horizontal,vertical
- * x, s, m, l, n       = extrasmall, small, medium, large, none
+ * x, s, m, l, n       = padding-x, padding-s, padding-m, padding-l, none
  * p, m                = padding,margin
 .ptn, .pvn, .pan
   padding-top: 0
 
 .ptx, .pvx, .pax
-  padding-top: $extrasmall
+  padding-top: $padding-x
 
 .pts, .pvs, .pas
-  padding-top: $small
+  padding-top: $padding-s
 
 .ptm, .pvm, .pam
-  padding-top: $medium
+  padding-top: $padding-m
 
 .ptl, .pvl, .pal
-  padding-top: $large
+  padding-top: $padding-l
 
 .prn, .phn, .pan
   padding-right: 0
 
 .prx, .phx, .pax
-  padding-right: $extrasmall
+  padding-right: $padding-x
 
 .prs, .phs, .pas
-  padding-right: $small
+  padding-right: $padding-s
 
 .prm, .phm, .pam
-  padding-right: $medium
+  padding-right: $padding-m
 
 .prl, .phl, .pal
-  padding-right: $large
+  padding-right: $padding-l
 
 .pbn, .pvn, .pan
   padding-bottom: 0
 
 .pbx, .pvx, .pax
-  padding-bottom: $extrasmall
+  padding-bottom: $padding-x
 
 .pbs, .pvs, .pas
-  padding-bottom: $small
+  padding-bottom: $padding-s
 
 .pbm, .pvm, .pam
-  padding-bottom: $medium
+  padding-bottom: $padding-m
 
 .pbl, .pvl, .pal
-  padding-bottom: $large
+  padding-bottom: $padding-l
 
 .pln, .phn, .pan
   padding-left: 0
 
 .plx, .phx, .pax
-  padding-left: $extrasmall
+  padding-left: $padding-x
 
 .pls, .phs, .pas
-  padding-left: $small
+  padding-left: $padding-s
 
 .plm, .phm, .pam
-  padding-left: $medium
+  padding-left: $padding-m
 
 .pll, .phl, .pal
-  padding-left: $large
+  padding-left: $padding-l
 
 .mtn, .mvn, .man
   margin-top: 0px
 
 .mtx, .mvx, .max
-  margin-top: $extrasmall
+  margin-top: $padding-x
 
 .mts, .mvs, .mas
-  margin-top: $small
+  margin-top: $padding-s
 
 .mtm, .mvm, .mam
-  margin-top: $medium
+  margin-top: $padding-m
 
 .mtl, .mvl, .mal
-  margin-top: $large
+  margin-top: $padding-l
 
 .mrn, .mhn, .man
   margin-right: 0px
 
 .mrx, .mhx, .max
-  margin-right: $extrasmall
+  margin-right: $padding-x
 
 .mrs, .mhs, .mas
-  margin-right: $small
+  margin-right: $padding-s
 
 .mrm, .mhm, .mam
-  margin-right: $medium
+  margin-right: $padding-m
 
 .mrl, .mhl, .mal
-  margin-right: $large
+  margin-right: $padding-l
 
 .mbn, .mvn, .man
   margin-bottom: 0px
 
 .mbx, .mvx, .max
-  margin-bottom: $extrasmall
+  margin-bottom: $padding-x
 
 .mbs, .mvs, .mas
-  margin-bottom: $small
+  margin-bottom: $padding-s
 
 .mbm, .mvm, .mam
-  margin-bottom: $medium
+  margin-bottom: $padding-m
 
 .mbl, .mvl, .mal
-  margin-bottom: $large
+  margin-bottom: $padding-l
 
 .mln, .mhn, .man
   margin-left: 0px
 
 .mlx, .mhx, .max
-  margin-left: $extrasmall
+  margin-left: $padding-x
 
 .mls, .mhs, .mas
-  margin-left: $small
+  margin-left: $padding-s
 
 .mlm, .mhm, .mam
-  margin-left: $medium
+  margin-left: $padding-m
 
 .mll, .mhl, .mal
-  margin-left: $large
+  margin-left: $padding-l
 
