Text inputs refactoring. Selects refactoring. Placing blocks according to mockup. Hot news module

--- a/app/assets/stylesheets/layouts/futurico.sass
+++ b/app/assets/stylesheets/layouts/futurico.sass
@@ -33,3 +33,18 @@ a
 .futurico-content
   padding-left: 40px
 
+.paragraph
+  margin-bottom: 12px
+  &.sharp
+    color: $sharp
+  &.contrast
+    color: $contrast
+  &.firm
+    color: $firm
+  &.pale
+    color: $pale
+  &.bare
+    color: $bare
+  &.opaque
+    color: $opaque
+
