--- a/app/assets/stylesheets/modules/dark/circle-banner.sass
+++ b/app/assets/stylesheets/modules/dark/circle-banner.sass
@@ -3,7 +3,7 @@
 .circle-banner
   background-color: #141517
   border-radius: 50%
-  color: #fff
+  color: $sharp
   font: italic 11px $firm-font
   height: 165px
   line-height: 1.5
