--- a/app/assets/stylesheets/modules/dark/datepicker.sass
+++ b/app/assets/stylesheets/modules/dark/datepicker.sass
@@ -1,6 +1,9 @@
 @import '../../framework/config'
 
 .datepicker-placeholder
+  // Just to fit futurico grid
+  min-height: 250px
+  min-width: 210px
   position: relative
 
 .ui-datepicker
