--- a/app/views/static/futurico/_circle-banner.html.haml
+++ b/app/views/static/futurico/_circle-banner.html.haml
@@ -5,7 +5,7 @@
     .banner-pull-r.pull1
     .banner-pull-l.pull2
     .banner-pull-r.pull2
-    Italian wine is wine produced in Italy, a country which is home to some of the oldest wine-producing
+    Italian wine is wine produced in Italy, a country which is home to some of the oldest companies
 
   .banner-description
     %a{:href => "#"} Read More
