--- a/app/views/static/futurico/_equalizer.html.haml
+++ b/app/views/static/futurico/_equalizer.html.haml
@@ -1,3 +1,6 @@
+.paragraph.sharp
+  full bass &amp; treble
+
 .equalizer.clearfix
   .bar
     .scale{:style => "height: 35px"}
@@ -45,5 +48,10 @@
   .bar-delimiter
 
   .bar
-    .scale{:style => "height: 0px"}
+    .scale{:style => "height: 33px"}
+
+  .bar-delimiter
+
+  .bar
+    .scale{:style => "height: 78px"}
 
