--- a/app/assets/stylesheets/modules/dark/slideshow.sass
+++ b/app/assets/stylesheets/modules/dark/slideshow.sass
@@ -12,6 +12,7 @@ $slide-width: 272px
   background: #141517
   border-radius: 8px
   display: inline-block
+  margin: 0 20px
   padding: 4px
   position: relative
   +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .06)))
