--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -3,71 +3,70 @@
   %head
     %meta{:charset => "UTF-8"}
     %title Scaffy framework
-    = stylesheet_link_tag "futurico-dark"
-    = javascript_include_tag "application"
+    =stylesheet_link_tag "futurico-dark"
+    =javascript_include_tag "application"
+    %meta{:content => "initial-scale = 1, maximum-scale = 1, user-scalable = no", :name => "viewport"}/
   %body
     %img.background-light{:src => "/assets/futurico/background-light.png", :alt => ""}
 
     .container
-      = render :partial => "static/futurico/header"
+      =render :partial => "static/futurico/header"
 
       .content
         .wrapper.clearfix
           .col1of4
-            = render :partial => "static/futurico/text_inputs"
-            = render :partial => "static/futurico/scrollboxes"
-            = render :partial => "static/futurico/selects"
-            = render :partial => "static/futurico/text-inputs-rounded"
+            =render :partial => "static/futurico/text_inputs"
+            =render :partial => "static/futurico/scrollboxes"
+            =render :partial => "static/futurico/selects"
+            =render :partial => "static/futurico/text-inputs-rounded"
             .mbl.pbm
               = render :partial => "static/futurico/checkboxes"
-            .pbl
-              = render :partial => "static/futurico/buttons"
+            .mbl
+              =render :partial => "static/futurico/login"
+            .mbl
+              =render :partial => "static/futurico/hot-news"
+            .mbl.pvm
+              =render :partial => "static/futurico/progressbar"
             .mbl.clearfix
               =render :partial => "static/futurico/equalizer"
 
           .futurico-content.last-col
             .mbl.pbl
-              = render :partial => "static/futurico/tabbox"
+              =render :partial => "static/futurico/tabbox"
             .mbl.pbl.clearfix
               .col1of6
-                = render :partial => "static/futurico/crossbar"
+                =render :partial => "static/futurico/crossbar"
               .col1of3
-                = render :partial => "static/futurico/currently-playing"
+                =render :partial => "static/futurico/currently-playing"
               .left
                 .mll.pll
                   = render :partial => "static/futurico/commutators"
               .last-col
                 .mll.pll
-                  = render :partial => "static/futurico/user-slug"
+                  =render :partial => "static/futurico/user-slug"
 
             .mbl.pbl.clearfix
-              =render :partial => "static/futurico/stickers"
-              .col1of3
-                .mbl.prl.mrl
-                  =render :partial => "static/futurico/progressbar"
-              .last-col
-                .mbm
-                  =render :partial => "static/futurico/starbar"
-
-            .mbl.pbl.clearfix
-              .col2of5
-                =render :partial => "static/futurico/login"
-              .last-col
-                .mll.pll
-                  =render :partial => "static/futurico/datepicker"
-
-            .mbl.pbl.clearfix
-              .left.mrl.prl
-                =render :partial => "static/futurico/pagination"
-              .left.mrl.prl
-                =render :partial => "static/futurico/comments"
-
-            .mbl.pbl.clearfix
-              .left.mrl.prl
+              .col1of2
                 =render :partial => "static/futurico/slideshow"
-              .left.mll.pll
-                =render :partial => "static/futurico/circle-banner"
+              .col1of2.last-col
+                .pll.mll
+                  =render :partial => "static/futurico/stickers"
 
             .mbl.pbl.clearfix
-              =render :partial => "static/futurico/appreciate"
+              .col1of2
+                =render :partial => "static/futurico/datepicker"
+
+              .col1of2.last-col
+                .pll.mll
+                  =render :partial => "static/futurico/circle-banner"
+
+            .mbl.pbl.clearfix
+              .col1of2.mrl.prl
+                .mbl.pbm.clearfix
+                  =render :partial => "static/futurico/appreciate"
+
+                =render :partial => "static/futurico/starbar"
+
+              .left.pll.mlm
+                =render :partial => "static/futurico/buttons"
 
