--- a/app/views/static/futurico/_buttons.html.haml
+++ b/app/views/static/futurico/_buttons.html.haml
@@ -1,26 +1,16 @@
 .mbl
-  .button Div button
-
-.mbl
-  %a.button{:href => "#"} Link button
-
-.mbl
-  %input.button{:type => "submit", :value => "Input button"}
-
-.mbl
-  %a.button.firm{:href => "#"} Firm button
-
-.mbl
-  %a.button.positive{:href => "#"} Positive button
-
-.mbl
-  %a.button.neutral{:href => "#"} Neutral button
-
-.mbl
-  %a.button.positive.disabled{:href => "#"} Disabled button
-
-.mbl
   %a.button-huge.positive{:href => "#"}
     SIGN IN
     %span.button-description One minute
+
+.mbl
+  %a.button.mrm{:href => "#"} button
+  %a.button.firm{:href => "#"} button
+
+.mbl
+  %a.button.positive.mrm{:href => "#"} button
+  %a.button.neutral{:href => "#"} button
+
+.by-center
+  %a.button.positive.disabled{:href => "#"} Disabled button
 
