--- a/app/views/static/futurico/_login.html.haml
+++ b/app/views/static/futurico/_login.html.haml
@@ -13,7 +13,7 @@
   .login-buttons.clearfix
     .left.pts
       .checkbox-light.square.checked
-        remember me
+        remember
     .right
       %input.button.positive{:type => "submit", :value => "Sign in "}
 
