--- a/app/views/static/futurico/_login.html.haml
+++ b/app/views/static/futurico/_login.html.haml
@@ -12,7 +12,7 @@
 
   .login-buttons.clearfix
     .left.pts
-      .checkbox-light.square.checked
+      .checkbox-light.square.checked.js-checkbox
         remember
     .right
       %input.button.positive{:type => "submit", :value => "Sign in "}
