--- a/app/views/static/futurico/_header.html.haml
+++ b/app/views/static/futurico/_header.html.haml
@@ -1,39 +1,29 @@
-.header
-  .wrapper.clearfix
-    .col1of4.header-controls
-      %a{:href => "#"} Sign In
-      %span.phs
-        :plain
-          /
-      %a{:href => "#"} Register
-      %span.delimiter.phs
-        :plain
-          or
-      %a.fb-signup{:href => "#"}
+.mbl
+  .header
+    .wrapper.clearfix
+      .col1of4.header-controls
+        %a{:href => "#"} Sign In
+        %span.phs
+          :plain
+            /
+        %a{:href => "#"} Register
+        %span.delimiter.phs
+          :plain
+            or
+        %a.fb-signup{:href => "#"}
 
-    .col1of2
-      %ul.header-navigation
-        %li.current
-          %a{:href => "#"} Main page
-        %li
-          %a{:href => "html/bundle.zip"} HTML / CSS / JS
-        %li
-          %a{:href => "http://github.com/railsware/scaffy"} HAML / SASS / JS
+      .col1of2
+        %ul.header-navigation
+          %li.current
+            %a{:href => "#"} Main page
+          %li
+            %a{:href => "#"} Services
+          %li
+            %a{:href => "#"} Contacts
 
-    .last-col
-      .header-search
-        .text-rounded.light
-          %input{:type => "text", :placeholder => "Search box light", :tabindex => "1"}
-          %input.search-button{:type => "submit", :value => "", :tabindex => "2"}
-
-.wrapper
-  .site-info
-    %h1.sitename
-      Futurico user interface
-      %span.version 1.0
-
-    .about
-      %span.legend-left
-      %span.legend-center Based on Scaffy framework
-      %span.legend-right
+      .last-col
+        .header-search
+          .text-rounded.light
+            %input{:type => "text", :placeholder => "Search box light", :tabindex => "1"}
+            %input.search-button{:type => "submit", :value => "", :tabindex => "2"}
 
