Site info with copyright

--- a/app/assets/stylesheets/modules/dark/site-info.sass
+++ b/app/assets/stylesheets/modules/dark/site-info.sass
@@ -1,8 +1,7 @@
 @import '../../framework/config'
 
 .site-info
-  padding: 25px 0 0 25px
-  text-align: center
+  padding: 70px 0 50px
   text-shadow: 0 1px 0 rgba(#fff, .06)
   .sitename
     font-weight: bold
@@ -13,8 +12,6 @@
   .about
     font-family: $firm-font
     font-style: italic
-    left: -13px
-    margin: auto
     overflow: hidden
     position: relative
     text-align: center
@@ -43,4 +40,9 @@
 
   .legend-right
     margin: 0 -999px 0 0
+
+.site-info-credentials
+  color: $pale
+  padding: 50px 0
+  text-align: center
 
