--- a/sass/framework/reset.sass
+++ b/sass/framework/reset.sass
@@ -91,3 +91,10 @@ textarea
   overflow: auto
   vertical-align: top
 
+code
+  white-space: pre
+
+code,
+pre
+  font: #{$base-font-size}/1.231 $base-font
+
