--- a/sass/layouts/application.sass
+++ b/sass/layouts/application.sass
@@ -3,7 +3,7 @@
 body
   background: #fff
   color: $base-color
-  font: #{$base-font-size}/1.231 $base-font
+  font: #{$base-font-size}/1.35 $base-font
 
 .wrapper
   clear: both
@@ -15,7 +15,18 @@ body
 .unordered-list
   font-size: $h5
   margin-bottom: 20px
-  li
-    list-style-type: square
-    margin: 0 0 5px 25px
+
+.unordered-list-item
+  list-style-type: square
+  margin: 0 0 20px 25px
+
+pre
+  border-left: 4px solid $positive
+  line-height: 1.5
+  margin: 15px 0
+  padding: 10px 15px
+
+code
+  color: $link
+  font-family: Monaco, monospace
 
