--- a/css/framework/reset.css
+++ b/css/framework/reset.css
@@ -88,3 +88,10 @@ input[type="search"]::-webkit-search-cancel-button {
 textarea {
   overflow: auto;
   vertical-align: top; }
+
+code {
+  white-space: pre; }
+
+code,
+pre {
+  font: 14px/1.231 Arial, Helvetica, sans-serif; }
