--- a/sass/layouts/application.sass
+++ b/sass/layouts/application.sass
@@ -30,3 +30,12 @@ code
   color: $link
   font-family: Monaco, monospace
 
+.link-by-railsware
+  background: url('../../images/by-rw-corner.png') 0 0 no-repeat
+  height: 163px
+  position: absolute
+  right: 0
+  text-indent: -99999em
+  top: 0
+  width: 163px
+
