--- a/css/layouts/application.css
+++ b/css/layouts/application.css
@@ -27,3 +27,12 @@ pre {
 code {
   color: #0072ff;
   font-family: Monaco, monospace; }
+
+.link-by-railsware {
+  background: url("../../images/by-rw-corner.png") 0 0 no-repeat;
+  height: 163px;
+  position: absolute;
+  right: 0;
+  text-indent: -99999em;
+  top: 0;
+  width: 163px; }
