--- a/sass/layouts/application.sass
+++ b/sass/layouts/application.sass
@@ -39,3 +39,10 @@ code
   top: 0
   width: 163px
 
+.rw-link
+  border-bottom: 1px solid #cc0000
+  color: inherit
+  text-decoration: none
+  &:hover
+    border-bottom-color: red
+
