--- a/css/layouts/application.css
+++ b/css/layouts/application.css
@@ -36,3 +36,10 @@ code {
   text-indent: -99999em;
   top: 0;
   width: 163px; }
+
+.rw-link {
+  border-bottom: 1px solid #cc0000;
+  color: inherit;
+  text-decoration: none; }
+  .rw-link:hover {
+    border-bottom-color: red; }
