--- a/css/framework/type.css
+++ b/css/framework/type.css
@@ -1,3 +1,4 @@
+@import url('http://fonts.googleapis.com/css?family=Signika:400,600');
 h1, .h1 {
   font-size: 24px; }
 
@@ -11,16 +12,13 @@ h4, .h4 {
   font-size: 16px; }
 
 h5, .h5 {
-  font-size: 15px; }
+  font-size: 14px; }
 
 h6, .h6 {
-  font-size: 11px; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: bold; }
+  font-size: 13px; }
 
 h1 {
-  margin-bottom: 20px; }
+  margin-bottom: 15px; }
 
 h2 {
   margin-bottom: 13px; }
@@ -35,7 +33,7 @@ h5 {
   margin-bottom: 5px; }
 
 .opaque {
-  color: #333333; }
+  color: #444444; }
 
 .neutral {
   color: #666666; }
@@ -47,22 +45,22 @@ h5 {
   color: #aaaaaa; }
 
 .firm {
-  color: #9bc345; }
+  color: #1dd681; }
 
 .sharp {
-  color: white; }
+  color: #252525; }
 
 .contrast {
-  color: black; }
+  color: white; }
 
 .positive {
-  color: #9cc346; }
+  color: #1dd681; }
 
 .negative {
-  color: #c34646; }
+  color: #cc0000; }
 
 a {
-  color: #0072ff;
-  text-decoration: underline; }
+  color: #1dd681;
+  text-decoration: none; }
   a:hover {
-    text-decoration: none; }
+    color: #6eebb2; }
