--- a/sass/framework/config.sass
+++ b/sass/framework/config.sass
@@ -1,26 +1,25 @@
 // Colors
-$base-color: #000
-$opaque:     #333
+$base-color: #e5dde6
+$opaque:     #444
 $neutral:    #666
 $pale:       #999
 $bare:       #aaa
-$firm:       #9bc345
-$sharp:      #fff
-$contrast:   #000
-$positive:   #9cc346
-$negative:   #c34646
-$link:       #0072ff
+$firm:       #1dd681
+$sharp:      #252525
+$contrast:   #fff
+$positive:   #1dd681
+$bright:     #dfb301
+$negative:   #c00
 
 // Typography
-$base-font: Arial, Helvetica, sans-serif
-$firm-font: Georgia, serif
+$base-font: 'Signika', sans-serif
 $h1: 24px
 $h2: 20px
 $h3: 18px
 $h4: 16px
-$h5: 15px
-$h6: 11px
-$base-font-size: 14px
+$h5: 14px
+$h6: 13px
+$base-font-size: 15px
 
 // Spaces
 $space-x: 3px
