Scaffy problems and benefits paragraphs. New pin up girls.

--- a/css/layouts/application.css
+++ b/css/layouts/application.css
@@ -32,15 +32,31 @@ body {
   margin: 0 0 20px 25px; }
 
 pre {
-  border-left: 4px solid #1dd681;
+  border-left: 1px solid #1dd681;
   line-height: 1.5;
   margin: 15px 0;
-  padding: 10px 15px; }
+  padding: 10px 15px;
+  overflow: auto; }
+  pre::-webkit-scrollbar {
+    background: rgba(255, 255, 255, 0.05);
+    width: 8px;
+    height: 8px; }
+  pre::-webkit-scrollbar-corner, pre::-webkit-resizer {
+    display: none; }
+  pre::-webkit-scrollbar-track-piece:disabled {
+    display: none !important; }
+  pre::-webkit-scrollbar:vertical {
+    border: none; }
+  pre::-webkit-scrollbar-thumb:vertical, pre::-webkit-scrollbar-thumb:horizontal {
+    background: rgba(255, 255, 255, 0.15);
+    border: none;
+    min-height: 20px; }
+  pre::-webkit-scrollbar-thumb:vertical:hover, pre::-webkit-scrollbar-thumb:horizontal:hover {
+    background: #1dd681; }
 
 code {
   color: #1dd681;
-  font-family: Monaco, monospace;
-  white-space: pre-wrap; }
+  font-family: Monaco, monospace; }
 
 .link-by-railsware {
   background: url("../../images/by-rw-corner.png") 0 0 no-repeat;
@@ -53,10 +69,11 @@ code {
 
 .rw-link {
   border-bottom: 1px solid #cc0000;
-  color: inherit;
+  color: #ff3333;
   text-decoration: none; }
   .rw-link:hover {
-    border-bottom-color: red; }
+    border-bottom-color: red;
+    color: #ff6666; }
 
 .article-pic {
   margin-bottom: 10px; }
