--- a/sass/modules/debug-grid.sass
+++ b/sass/modules/debug-grid.sass
@@ -1,16 +1,16 @@
 @import '../framework/config'
 
 .debug-grids
+  text-align: center
+  cursor: default
   .inner-col
-    background-color: #ddd
-    border-radius: 3px
-    border: 1px solid #d0d0d0
+    background-color: rgba(#fff, .1)
+    border: 1px solid rgba(#fff, .1)
     margin: 0 $space-m $space-m 0
     padding: $space-m
     &:hover
-      background-color: #d0d0d0
+      background-color: rgba(#fff, .15)
 
   .last-col
     .inner-col
       margin-right: 0
-
