--- a/sass/layouts/application.sass
+++ b/sass/layouts/application.sass
@@ -29,15 +29,34 @@ body
   margin: 0 0 20px 25px
 
 pre
-  border-left: 4px solid $positive
+  border-left: 1px solid $positive
   line-height: 1.5
   margin: 15px 0
   padding: 10px 15px
+  overflow: auto
+  &::-webkit-scrollbar
+    background: rgba(#fff, .05)
+    width: 8px
+    height: 8px
+  &::-webkit-scrollbar-corner,
+  &::-webkit-resizer
+    display: none
+  &::-webkit-scrollbar-track-piece:disabled
+    display: none !important
+  &::-webkit-scrollbar:vertical
+    border: none
+  &::-webkit-scrollbar-thumb:vertical,
+  &::-webkit-scrollbar-thumb:horizontal
+    background: rgba(#fff, .15)
+    border: none
+    min-height: 20px
+  &::-webkit-scrollbar-thumb:vertical:hover,
+  &::-webkit-scrollbar-thumb:horizontal:hover
+    background: $positive
 
 code
   color: $positive
   font-family: Monaco, monospace
-  white-space: pre-wrap
 
 .link-by-railsware
   background: url('../../images/by-rw-corner.png') 0 0 no-repeat
@@ -50,11 +69,12 @@ code
 
 .rw-link
   border-bottom: 1px solid #cc0000
-  color: inherit
+  color: lighten(#c00, 20%)
   text-decoration: none
   &:hover
     border-bottom-color: red
+    color: lighten(#c00, 30%)
+
 
 .article-pic
   margin-bottom: 10px
-
