--- a/sass/layouts/application.sass
+++ b/sass/layouts/application.sass
@@ -78,3 +78,17 @@ code
 .article-pic
   margin-bottom: 10px
 
+.button
+  background-color: $positive
+  color: $contrast
+  cursor: pointer
+  display: inline-block
+  font-size: $h3
+  padding: 8px 18px
+  &:hover,
+  &:focus
+    background: lighten($positive, 20%)
+    color: $contrast
+  &:active
+    background: darken($positive, 20%)
+
