--- a/sass/modules/debug-grid.sass
+++ b/sass/modules/debug-grid.sass
@@ -3,6 +3,7 @@
 .debug-grids
   text-align: center
   cursor: default
+  +clearfix
   .inner-col
     background-color: rgba(#fff, .1)
     border: 1px solid rgba(#fff, .1)
